[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
description = "A simple software launcher for linux. Inspired by rofi and dmenu."
license = "MIT"
repository = "https://github.com/paulfrische/launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.11.0"
ron = "0.8.0"
clap = { version = "4.3.21", features = ["derive"] }
sdl2 = { version = "0.35.2", features = ["default", "ttf"] }
serde = { version = "1.0.183", features = ["derive"] }
